[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-telemetry"
version = "1.1.1"
description = "Lightweight Raspberry Pi hardware telemetry dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "ReconLion" },
]
keywords = ["raspberry-pi", "telemetry", "dashboard", "monitoring", "hardware"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black==25.11.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/0xreconlion/OpSecTools"
Documentation = "https://github.com/0xreconlion/OpSecTools/tree/main/tools/pi-telemetry#readme"
Repository = "https://github.com/0xreconlion/OpSecTools"
Issues = "https://github.com/0xreconlion/OpSecTools/issues"

[project.scripts]
pi-telemetry = "pi_telemetry.launcher:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "psutil"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
